// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.languages.web;

option go_package = "namespacelabs.dev/foundation/internal/languages/web";

message Backend {
    string endpoint_owner = 1;
    string service_name   = 2;
}